<resources>
    <string name="app_name">Agenda</string>
    <string name="agregar">Agregar</string>
    <string name="nombre">Nombre</string>
    <string name="casado_a">Casado(a)</string>
    <string name="soltero_a">Soltero(a)</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="usuairo">Usuairo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_menu">Agenda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lista">Lista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estado">Estado</string>
</resources>
