<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exam.francys.appagenda.Fragments.CreateUsers">

<GridLayout
    android:rowCount="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="16sp"
        android:id="@+id/Nombre"
        android:inputType="text"
        app:met_validateOnFocusLost="true"
        app:met_errorColor="@android:color/holo_red_dark"

        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_row="0"
        android:layout_column="0" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos"
        android:textSize="16sp"
        android:id="@+id/Apellidos"
        android:layout_row="1"
        android:inputType="text"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_below="@+id/Nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_column="0" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:textSize="16sp"
        android:id="@+id/direccion"
        android:inputType="text"
        android:layout_row="2"
        android:layout_column="0"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:textSize="16sp"
        android:id="@+id/telefono"
        android:inputType="phone"
        android:layout_row="3"
        android:layout_column="0"
        app:met_minCharacters="10"
        app:met_autoValidate="true"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_below="@+id/direccion"
        android:layout_toRightOf="@+id/radioGroup4"
        android:layout_toEndOf="@+id/radioGroup4" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:textSize="16sp"
        android:id="@+id/Correo"
        android:inputType="textEmailAddress"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_above="@+id/Usuario"
        android:layout_toRightOf="@+id/radioGroup3"
        android:layout_toEndOf="@+id/radioGroup3"
        android:layout_row="4"
        android:layout_column="0" />

    <RadioGroup
        android:id="@+id/EstadoGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0">

        <RadioButton
            android:id="@+id/Casado"
            android:checked="true"
            android:text="@string/casado_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/Soltero"
            android:text="@string/soltero_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RadioGroup>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuairo"
        android:textSize="16sp"
        android:id="@+id/Usuario"
        android:inputType="text"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_above="@+id/Contra"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:textSize="16sp"
        android:id="@+id/Contra"
        android:inputType="textPassword"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_minCharacters="6"
        app:met_errorColor="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="8"
        android:layout_column="0" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="#585858"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleDelayClick="false"
        app:mrl_rippleHover="true"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_below="@+id/editText">

        <Button
            android:id="@+id/agregar"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agregar"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    </GridLayout>


</ScrollView>
