<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:id="@+id/MarcoGurpo"
    android:layout_margin="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ViewTelefono"
            android:id="@+id/ViewCorreo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/ViewTelefono"
            android:layout_alignStart="@+id/ViewTelefono"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ViewDireccion"
            android:layout_alignLeft="@+id/ViewDireccion"
            android:layout_alignStart="@+id/ViewDireccion"
            android:id="@+id/ViewTelefono"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ViewNombre"
            android:id="@+id/ViewDireccion"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/ViewNombre"
            android:layout_alignStart="@+id/ViewNombre"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView8"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/usuairo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ViewCorreo"
            android:layout_alignLeft="@+id/ViewCorreo"
            android:layout_alignStart="@+id/ViewCorreo"
            android:id="@+id/ViewEstado"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ViewEstado"
            android:id="@+id/ViewUsuaro"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/ViewTelefono"
            android:layout_alignStart="@+id/ViewTelefono"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ViewNombre"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/bottom_text_size" />

    </RelativeLayout>


</android.support.v7.widget.CardView>